@@ -1,3 +1,4 @@
+#!/bin/bash
 #
 #©K. D. Hedger. Mon 29 Jul 12:06:32 BST 2024 keithdhedger@gmail.com
 #
